# graphql-workshop

./: LICENSE  README.md  pyproject.toml  requirements.txt
01-basics/: example.py
01-basics-final/: example.py
02-object-types/: example.py
02-object-types-final/: example.py
03-django/example/: settings.py  views.py
03-django/example/example/: graphql.py  urls.py  views.py
04-django-channels/: requirements.txt
04-django-channels/example/: routing.py  settings.py
04-django-channels/example/example/: routing.py
