[tool.poetry]
name = "graphql-workshop"
version = "0.0.0"
license = "BSD-3-Clause"
authors = [
    "Mirumee Software <hello@mirumee.com>"
]

[tool.poetry.dependencies]
python = "^3.6"
ariadne = "^0.3.0"
django = "^2.2"
django-channels = "^0.7.0"
uvicorn = "^0.6.1"
channels = "^2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
black = "^19.3b0"
