[tool.poetry]
name = "graphql-workshop"
version = "0.0.0"
license = "BSD-3-Clause"
authors = [
    "Mirumee Software <hello@mirumee.com>"
]

[tool.poetry.dependencies]
python = "^3.6"
ariadne = "^0.5"
django = "^2.2"
uvicorn = "^0.8"
channels = "^2.2"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
black = "^19.3b0"
